--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/bookstore?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
-
 server.port=8082
+bookstore.app.jwtSecret=VermegBookStoreExerciceWithAngular&SpringBoot
+bookstore.app.jwtExpirationMs=900000
