--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.show-sql=true
 server.port=8082
 bookstore.app.jwtSecret=VermegBookStoreExerciceWithAngular&SpringBoot
-bookstore.app.jwtExpirationMs=900000
+bookstore.app.jwtExpirationMs=1800000
